--- a/css/style.scss
+++ b/css/style.scss
@@ -5,7 +5,7 @@
 }
 
 body {
-  background: url(../img/111.jpg) no-repeat;
+  background: url(../img/111.jpg) no-repeat center;
   opacity: 0.9;
 }
 .container {  
@@ -80,7 +80,7 @@ body {
  @media (max-width: 500px) {
   .container {
     margin-top: 100px;
-    width: 280px;    
+    width: auto;    
     
   }
 
